using UnityEngine;
using System.Collections;

public class AnimationStrings : MonoBehaviour
{
    internal static string isAlive = ("isAlive");
    internal static string isOnWall = ("isOnWall");
    internal static string isGrounded = ("isGrounded");
    internal static string isMoving = ("isMoving");
    internal static string isActive = ("isActive");
    internal static string isStunned = ("stun");
    internal static string isHit = ("isHit");

    internal static string canMove = ("canMove");
    internal static string canAttack = ("canAttack");

    internal static string heal = ("heal");
    internal static string jump = ("jump");

    internal static string xVelocity = ("xVelocity");
    internal static string yVelocity = ("yVelocity");

    internal static string swordAtk = ("swordAtk");
    internal static string swordMoveAtk = ("swordMoveAtk");
}
